Edited spelling error

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     
                 </div>
                 <div class="work-row">
-                    <h3>Coding Instrucor at iD Tech Camps</h3>
+                    <h3>Coding Instructor at iD Tech Camps</h3>
                     <p>Created lesson plans to teach students from 7-17 programming fundamentals in Java, C++, and Python.
                         Managed 8-10 students per week as they worked on individual programming projects
                     </p>
