Add new profile picture and resize it

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="middle-container">
             <div class="profile">
-              <img src="https://media-exp1.licdn.com/dms/image/C5603AQHVJSb0NpCvRQ/profile-displayphoto-shrink_200_200/0/1588967436483?e=1622073600&v=beta&t=Wzu7FEuK8QlNf1fUE2PdKO3-E_RJ8Mca0OIc_C0yb6U"
+              <img class="profile-picture" src="https://media-exp1.licdn.com/dms/image/C5603AQGk9O4bfxolYw/profile-displayphoto-shrink_400_400/0/1616722018586?e=1622073600&v=beta&t=ooypWv9I1fRA7qxacRloRce52tpiZKoT7zNc7yKKFZ8"
                alt="David's profile picture">
               <h2>Hello there!</h2>
               <p>I'm a Software Engineer and Computer Science student at UNLV</p>
